Fix a bug that the emoji isn't shown normally in Google Chrome by specifying the charset as utf-8

--- a/poc1.html
+++ b/poc1.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset='utf-8'>
         <title>CVE-2016-4657 Switch PoC</title>
         <style>
             body {font-size: 2em;}
